Fix columns being misaligned (Thanks Gwenwyfar)

--- a/Themes/default/css/responsive.css
+++ b/Themes/default/css/responsive.css
@@ -682,4 +682,8 @@
 	.boardslist {
 		columns: 2;
 	}
+
+	.boardslist ul {
+		page-break-inside: avoid;
+	}
 }
